--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script>
         // Use this area for high-level configuration;
         const components = [
+			"timer_set_library",
 			"redis",
             "airtable"
         ];
