--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <script src="js/vendor/mozart.js"></script>
     <script id="main_script" src="js/main.js"></script>
     <script type="module" src="js/time.js"></script>
+    <script type="module" src="js/constants.js"></script>
     <script src="js/vendor/viewport-fix.js"></script>
     <script>new VVP()</script>
     <link rel="stylesheet" href="css/icofont.min.css">
